<resources>
    <string name="app_name">Android Controles y Eventos</string>
    <string name="texto_tarjeta">Número de tarjeta</string>
    <string name="texto_expira">Expira:</string>
    <string name="texto_CCV">CCV:</string>
    <string name="texto_tipo_tarjeta">Tipo de tarjeta:</string>
    <string name="texto_promo">Cliente promocional:</string>
    <string name="boton_enviar">Enviar</string>
    <string name="boton_borrar">Borrar</string>
    <string name="expiraHint">MM/AA</string>
    <string name="goToEventos">Ir a Eventos</string>

    <string-array name="ccTypes">
        <item>Visa</item>
        <item>Master Card</item>
        <item>American Express</item>
        <item>Discover</item>
    </string-array>

    <string name="goToControles">Ir a Controles</string>
    <string name="texto_nombre">Nombre</string>
    <string name="texto_edad">Edad</string>
    <string name="texto_hombre">Hombre</string>
    <string name="texto_mujer">Mujer</string>
    <string name="texto_estudiante">Estudiante</string>

</resources>
