<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_eventos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="oscarf.androidcontroles.Eventos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/textViewCompleto"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/texto_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCompleto"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:id="@+id/textViewNombre" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textViewNombre"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextNombre" />

    <TextView
        android:text="@string/texto_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNombre"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:id="@+id/textViewEdad"
        android:layout_alignEnd="@+id/checkBoxEstudiante" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewEdad"
        android:layout_alignParentStart="true"
        android:id="@+id/spinnerEdad"
        android:layout_alignEnd="@+id/textViewEdad" />

    <CheckBox
        android:text="@string/texto_estudiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/checkBoxEstudiante" />

    <Button
        android:text="@string/boton_borrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBorrar"
        android:layout_alignBaseline="@+id/buttonEnviar"
        android:layout_alignBottom="@+id/buttonEnviar"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/holo_green_dark"/>

    <Button
        android:text="@string/boton_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:id="@+id/buttonEnviar"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/buttonBorrar"
        android:textColor="@android:color/holo_blue_dark"/>

    <Button
        android:text="@string/goToControles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonEnviar"
        android:id="@+id/buttonGoToControles"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxEstudiante"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:layout_toStartOf="@+id/buttonEnviar"
        android:layout_alignEnd="@+id/editTextNombre">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:text="@string/texto_mujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonMujer"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/texto_hombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonHombre"
                android:layout_weight="1" />
        </LinearLayout>

    </RadioGroup>
</RelativeLayout>
